# db/schema.rb
@@ -10,7 +10,7 @@
 #
 # It's strongly recommended that you check this file into your version control system.
 
-ActiveRecord::Schema.define(version: 2023_10_14_184742) do
+ActiveRecord::Schema.define(version: 2023_10_15_163727) do
 
   create_table "applications", force: :cascade do |t|
     t.integer "user_id", null: false
@@ -41,7 +41,10 @@ ActiveRecord::Schema.define(version: 2023_10_14_184742) do
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
     t.string "password_digest"
+    t.string "refresh_token"
+    t.datetime "refresh_token_expiry"
     t.index ["email"], name: "index_users_on_email"
+    t.index ["refresh_token"], name: "index_users_on_refresh_token"
   end
 
   add_foreign_key "applications", "posts"
